--- a/config.yaml
+++ b/config.yaml
@@ -24,6 +24,15 @@ monitors:
     followRedirect: false # should fetch follow redirects, default=false
     linkable: true # allows the title to be a link, default=true
     
+  - id: api-mw # unique identifier
+    name: API.mw
+#     description: 'You write code. They handle the rest.' # default=empty
+    url: 'https://api.mw' # URL to fetch
+    method: GET # default=GET
+    expectStatus: 200 # operational status, default=200
+    followRedirect: false # should fetch follow redirects, default=false
+    linkable: true # allows the title to be a link, default=true
+    
     
   - id: api-cf # unique identifier
     name: API.cf
