--- a/config.yaml
+++ b/config.yaml
@@ -81,10 +81,9 @@ monitors:
     
   - id: ai-co
     name: aï.co
-    url: 'http://aï.co'
+    url: 'https://xn--a-nga.co/'
     method: GET
     expectStatus: 200 
-    
     
     
   - id: saas-dev
