--- a/config.yaml
+++ b/config.yaml
@@ -208,4 +208,10 @@ monitors:
     expectStatus: 200 
     
     
+    
+  - id: SWR Cache
+    name: swr-cache
+    url: 'https://word.as/_next/data/rrSNvilhJGr9K_LbV2WP_/system.json'
+    method: GET
+    expectStatus: 200 
 
