--- a/config.yaml
+++ b/config.yaml
@@ -49,11 +49,11 @@ monitors:
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
 
-  - id: actions-dev
-    name: Actions.Dev
-    url: 'https://actions.dev'
-    method: GET
-    expectStatus: 200
+  # - id: actions-dev
+  #   name: Actions.Dev
+  #   url: 'https://actions.dev'
+  #   method: GET
+  #   expectStatus: 200
     
     
   - id: caching
